<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_title"/>

    <item
            android:id="@+id/navigation_upcoming"
            android:icon="@drawable/upcoming_icon"
            android:title="@string/title_upcoming"/>

    <item
            android:id="@+id/navigation_finished"
            android:icon="@drawable/finished_icon"
            android:title="@string/title_finished"/>

    <item
    android:id="@+id/navigation_favorite_event"
    android:icon="@drawable/baseline_favorite_border_24"
    android:title="@string/favorite"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/setting"/>



</menu>
